fixing issues with z-index of the layout

--- a/static/styles/mainpage.css
+++ b/static/styles/mainpage.css
@@ -10,7 +10,7 @@ body {
   margin-top: 20px;
   cursor: pointer;
 }
-.line1, .line2, .line3{
+.line1, .line2{
   width: 3rem;
   height: 0.2rem;
   margin: 0.4rem; 
@@ -41,7 +41,7 @@ body {
     height: 625px;
     background-image: url("3.png");
     left: 0px;
-    z-index: -1;
+    z-index: -2;
   }
   @keyframes anim {
     from {
@@ -73,6 +73,7 @@ body {
     top: 250px;
     left: 100px;
     overflow: hidden;
+    z-index: -1;
   }
   #text {
     position: relative;
@@ -87,6 +88,7 @@ body {
     overflow: hidden;
     width: 300px;
     height: 100px;
+    z-index: -1;
   }
   #text2 {
     width: 300px;
@@ -162,7 +164,7 @@ body {
     bottom: 30px;
     left: 45%;
     overflow: hidden;
-    z-index: 999;
+    z-index: -1;
   }
   #box5 img {
     position: absolute;
@@ -196,7 +198,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items:  center;
-    z-index: 1;
+    z-index: -1;
     opacity: 1;
 
     /* CONTROL OF HIDDEN PAGE */
